# RUFUS

./: .gitignore  CMakeLists.txt  Dockerfile  Install.sh  Installgkno.sh  Makefile  OverlapRegion2  OverlapRegion2.cpp  README.md  RUFUSv5.Filter.cpp  RUFUSv6.BuildHash.cpp  configure.sh  install.sh  runRufus.sh
cloud/: CheckJellyHashList.sh  PassThroughSamCheck  PassThroughSamCheck.cpp  PassThroughSamCheck.stranded  PassThroughSamCheck.stranded.cpp  RUFUS.Filter.jellyPipe  RUFUS.Filter.jellyPipe.cpp  RUFUS.search.1kg  RUFUS.search.1kg.cpp  ReRunOverlap.asc.sh  RunJellyForRUFUS  RunJellyForRUFUS.UGP  RunRUFUS.1000G.withDupRemoce.sh  RunRUFUS.ASC.no1kg.sh  RunRUFUS.ASC.sh  RunRUFUS.Trio.sh  merge_files.cc  samtools  test
cloud/jellyfish-MODIFIED-merge/: Makefile  Makefile.in  config.status  configure  jellyfish-2.0.pc  libjellyfish-2.0.la  libtool
cloud/jellyfish-MODIFIED-merge-broke/: Makefile  config.status  jellyfish-2.0.pc  libtool  test
resources/: primate_non-LTR_Retrotransposon.fasta.amb  primate_non-LTR_Retrotransposon.fasta.ann  primate_non-LTR_Retrotransposon.fasta.bwt  primate_non-LTR_Retrotransposon.fasta.pac  primate_non-LTR_Retrotransposon.fasta.sa
resources/references/: small_test_human_reference_v37_decoys.fa.amb  small_test_human_reference_v37_decoys.fa.ann  small_test_human_reference_v37_decoys.fa.fai  small_test_human_reference_v37_decoys.fa.pac  small_test_human_reference_v37_decoys.fa.sa
resources/testData/: Father.bam.generator.Jhash  Mother.bam  Mother.bam.generator.Jhash  clean.sh  primate_non-LTR_Retrotransposon.fasta
scripts/: AddSAtoReadSame.pl  CheckForDuplicateCallsBed.pl  CheckJellyHashList.sh  Child.generator  ColapsDuplicateCalls.pl  ColapsDuplicateCalls.stream.pl  ConvertGRAPHITEVCFtoRformat.pl  ConvertVCFtoRformat.pl  FastqToSam.pl  Father.generator  GenerateProbNotError  GenerateProbNotError.cpp  GenerateProbNotError.pl  Genotype.sh  HistoBaseQualities.pl  HumanDedup.grenrator.tenplate  MobToDist.pl  Mother.generator  Overlap.pacbio.sh  Overlap.rerunAWS.save.sh  Overlap.rerunAWS.sh  Overlap.sh  Overlap.shorter.save  Overlap.shorter.sh  Overlap.shorter.simons.sh  Overlap.veryshort.save  Overlap.veryshort.sh  OverlapBashMultiThread.grc38.sh  OverlapBashMultiThread.individual.sh  OverlapBashMultiThread.old.sh  OverlapBashMultiThread.quad.sh  OverlapBashMultiThread.sh  OverlapBashMultiThread.test.sh  OverlapBashMultiThread.trio.save.sh  OverlapBashMultiThread.trio.sh  OverlapBashMultiThread.trio.sh.save  PullKmerCountsFromSequence.pl  RemoveDuplicateCalls.pl  RufusCreateModelPlot.DIST.R  RufusCreateModelPlot.R  (+32 more)
scripts/old/: RunTumor.sh  (+2 more)
src/: ._RUFUS.interpret.cpp  AnnotateOverlap.cpp  CMakeLists.txt  ConvertFASTqD.to.FASTQ.cpp  DumpSamReadKmerCount.cpp  ModelDist.cpp  ModelDist.haploid  ModelDist.haploid.cpp  ModelDist2.cpp  ModelDist7.7.withDip.cpp  Overlap  Overlap.cpp  Overlap19.cpp  Overlap20.cpp  OverlapRegion  OverlapRegion.cpp  OverlapRegion.small.cpp  OverlapSam.cpp  OverlapSam.cpp.save  OverlapSam.save.cpp  PassThroughSamCheck.cpp  PassThroughSamCheck.stranded.se.cpp  RUFUS.1kg.filter.cpp  RUFUS.Build.8.cutoff.1kg.cpp  RUFUS.Build.8.cutoff.cpp  RUFUS.Build.cpp  RUFUS.CheckHashFilter.cpp  RUFUS.Filter.2.cpp  RUFUS.Filter.cpp  RUFUS.Filter.oldss.cpp  RUFUS.Filter.ss.cpp  RUFUS.interpret.cpp  RUFUS.interpret.cpp.new.good.awesome  RUFUS.interpret.cpp.save  RUFUS.interpret.cpp.save.cpp  RUFUS.interpret.current.cpp  RUFUS.interpret.old.cpp  RUFUS.interpret.onlytwoParents.2.cpp  RUFUS.interpret.onlytwoParents.cpp  RUFUS.interpret.save.cpp  (+15 more)
src/brokenNewOverlap/: AnnotateOverlap.cpp  AnnotateOverlap.fasta.cpp  AnnotateOverlap.multi.cpp  Overlap.cpp  OverlapRegion.cpp  OverlapRegion.small.cpp  OverlapSam.HashFirst.cpp  OverlapSam.cpp  OverlapSam.cpp.save
src/modifiedJellyfish/jellyfish/: merge_files.cc
src/old/: Overlap19.cpp  RUFUSv5.Filter
testRun/: Child.bam  Child.mate1.fastq  Child.mate2.fastq  Father.bam  Father.mate1.fastq  Father.mate2.fastq  Mother.mate1.fastq  Mother.mate2.fastq  clean.sh  runDevTest.sh  runTest.fastq.sh  runTest.sh
(+43 files in other folders)
