CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RUFUS)

SET(VERSION_MAJOR "1.0")
SET(VERSION_MINOR "0")
SET(VERSION_PATCH "0")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

INCLUDE_DIRECTORIES(src, cloud, externals)

UNSET(CORE_LIBS CACHE)
SET(CORE_LIBS CACH LIST "List of plugin libs")

ADD_SUBDIRECTORY(externals)
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(cloud)

