CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(RUFUS)

SET(VERSION_MAJOR "1.0")
SET(VERSION_MINOR "0")
SET(VERSION_PATCH "0")
SET(VERSION "${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}")

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

INCLUDE_DIRECTORIES(src, externals)

UNSET(CORE_LIBS CACHE)
SET(CORE_LIBS CACH LIST "List of plugin libs")

ADD_SUBDIRECTORY(externals)
ADD_SUBDIRECTORY(src)

